# alexandria

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  docker-compose.yml  pyproject.toml
.plan/: 00_overview.md  01_stories.md  02_tasks.md  README.md  metadata.yaml
api/: alembic.ini  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 20260201_112121_initial_schema.py
api/src/alexandria_api/: __init__.py  app.py  config.py  dependencies.py
api/src/alexandria_api/middleware/: __init__.py  context.py
api/src/alexandria_api/routes/: documents.py  entities.py  health.py  tenants.py
docs/plans/01_initial_implementation/: 01_initial_implementation_plan.md
docs/plans/01_intial_implementation/: 01_initial_implementation_complement_research.md  01_initial_implementation_research.md
infra/docker/: Dockerfile.api  Dockerfile.worker  prometheus.yml
infra/docker/grafana/provisioning/dashboards/: dashboards.yml
infra/scripts/: init-neo4j.cypher  init-postgres.sql
libs/core/: pyproject.toml
libs/core/src/alexandria_core/: __init__.py
libs/core/src/alexandria_core/models/: __init__.py  base.py  document.py  entity.py  tenant.py
libs/db/: pyproject.toml
libs/db/src/alexandria_db/: __init__.py  connection.py
libs/db/src/alexandria_db/clients/: __init__.py  meilisearch.py  minio.py  neo4j.py  qdrant.py  temporal.py
libs/db/src/alexandria_db/models/: __init__.py  base.py  document.py  entity.py  tenant.py
libs/db/src/alexandria_db/repositories/: __init__.py  base.py  document.py  entity.py  tenant.py
scripts/plan/: archive-plan.sh  new-plan.sh
scripts/plan/templates/: 00_overview.md.tmpl  01_stories.md.tmpl  02_tasks.md.tmpl  README.md.tmpl  metadata.yaml.tmpl
workers/agent/: pyproject.toml
workers/agent/src/agent_worker/: __init__.py
workers/ingestion/: pyproject.toml
workers/ingestion/src/ingestion_worker/: __init__.py  worker.py
workers/ingestion/src/ingestion_worker/activities/: __init__.py  chunking.py  classification.py  document_activities.py  download.py  embedding_activities.py  embeddings.py  extraction_activities.py  indexing_activities.py  parsing.py
workers/ingestion/src/ingestion_worker/workflows/: __init__.py  document_ingestion.py
workers/ingestion/tests/: __init__.py  conftest.py  test_chunking.py  test_classification.py  test_document_ingestion_workflow.py  test_download.py  test_embeddings.py  test_extraction_activities.py  test_indexing_activities.py  test_parsing.py
workers/query/: pyproject.toml
workers/query/src/query_worker/: __init__.py
workers/query/src/query_worker/activities/: __init__.py  graph_query.py
workers/query/src/query_worker/workflows/: __init__.py
workers/query/tests/: __init__.py  test_graph_query.py
