[project]
name = "alexandria"
version = "0.1.0"
description = "Document research platform for investigative journalism using RAG/GraphRAG"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Alexandria Team" }]
keywords = ["rag", "graphrag", "document-research", "investigative-journalism", "llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# UV WORKSPACE CONFIGURATION
# =============================================================================
[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "ruff>=0.2",
    "pre-commit>=3.6",
    "httpx>=0.27",
]

[tool.uv.workspace]
members = [
    "api",
    "workers/*",
    "libs/*",
]

# =============================================================================
# RUFF - LINTING & FORMATTING
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "*.pyi",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate commented code
    "PL",     # pylint
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["alexandria", "api", "workers", "libs"]
section-order = ["future", "standard", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004"]

# =============================================================================
# MYPY - TYPE CHECKING
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

# Per-package overrides
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "qdrant_client.*",
    "meilisearch.*",
    "minio.*",
    "temporalio.*",
    "docling.*",
    "spacy.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST - TESTING
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require running services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["api/src", "workers", "libs"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true
