[project]
name = "alexandria-core"
version = "0.1.0"
description = "Alexandria Core - Shared domain models, schemas, and utilities"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alexandria_core"]
