[project]
name = "alexandria-db"
version = "0.1.0"
description = "Alexandria DB - Database clients and repositories"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "neo4j>=5.17",
    "qdrant-client>=1.7",
    "meilisearch>=0.30",
    "minio>=7.2",
    "temporalio>=1.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "alexandria-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alexandria_db"]

[tool.uv.sources]
alexandria-core = { workspace = true }
