[project]
name = "agent-worker"
version = "0.1.0"
description = "Alexandria Agent Worker - AI agents with OpenAI SDK and Temporal"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.4",
    "openai>=1.10",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "httpx>=0.27",
    "alexandria-core",
    "alexandria-db",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_worker"]

[tool.uv.sources]
alexandria-core = { workspace = true }
alexandria-db = { workspace = true }
