[project]
name = "ingestion-worker"
version = "0.1.0"
description = "Alexandria Ingestion Worker - Document processing with Temporal"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "minio>=7.2",
    "httpx>=0.27",
    "alexandria-core",
    "alexandria-db",
]

[project.scripts]
ingestion-worker = "ingestion_worker.worker:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",  # For mocking httpx
]
youtube = [
    "yt-dlp>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion_worker"]

[tool.uv.sources]
alexandria-core = { workspace = true }
alexandria-db = { workspace = true }
