[project]
name = "query-worker"
version = "0.1.0"
description = "Alexandria Query Worker - Search and retrieval with Temporal"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.4",
    "qdrant-client>=1.7",
    "meilisearch>=0.30",
    "neo4j>=5.17",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "httpx>=0.27",
    "alexandria-core",
    "alexandria-db",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/query_worker"]

[tool.uv.sources]
alexandria-core = { workspace = true }
alexandria-db = { workspace = true }
